04-GKE-Gateway-API-Selfsigned-SSL-CertManager/01-myapp1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: #Dictionary
  name: myapp1-deployment
spec: # Dictionary
  replicas: 2
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata: # Dictionary
      name: myapp1-pod
      labels: # Dictionary
        app: myapp1 # Key value pairs
    spec:
      containers: # List
      - name: myapp1-container
        image: aslam24/nginx-web-littlefashion:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "256Mi" # 128 MebiByte is equal to 135 Megabyte (MB)
            cpu: "250m" # `m` means milliCPU
          limits:
            memory: "512Mi"
            cpu: "400m" # 1000m is equal to 1 VCPU core
