04-GKE-Gateway-API-Selfsigned-SSL-CertManager/03-myapp1-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mygateway1-regional
spec:
  gatewayClassName: gke-l7-regional-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/cert-manager-certs: app1-us-central1-cert
  addresses:
  - type: NamedAddress
    value: my-regional-pip
